--- a/static/upload_form_test.html
+++ b/static/upload_form_test.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <h1> file upload test</h1>
-    <form method="POST", action="../upload" enctype="multipart/form-data">
+    <form method="POST", action="../upload_form_test" enctype="multipart/form-data">
     <div class="from-group">
         <label for="inputFile">choose file to upload</label>
         <br>
