--- a/static/player.html
+++ b/static/player.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 
-  <!-- Dubug button for manual reloading -->
-
-  <h1>AudioContext states demo</h1>
+  <h1>Player</h1>
   <div>
     <input type="number", id="songIDInput", value="25">
   </div>
