change table selector

--- a/static/player.html
+++ b/static/player.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Player</title>
+    <link rel="stylesheet" type="text/css" href="css/player.css" />
 </head>
 <body>
 
@@ -12,22 +13,36 @@
   </div>
 
   <div>
-  <button id="startAudioContext">Create context</button>
-  <button id="suspendAudioContext">Suspend context</button>
-  <button id="stopAudioContext">Stop context</button>
+  <button id="startAudioContext">&#x25b6; Play</button>
+  <button id="suspendAudioContext">&#x23ef; Pause</button>
+  <button id="stopAudioContext">&#x23f9; Stop</button>
   <p id="counter">Current context time: No context exists.</p>
   </div>
 
+  <!--
   <button type="button" onclick="console.log(getSong(25))">DEBUG</button>
   <button type="button" onclick="console.log(1); window.scrollBy(0, 300);">ScrollBy</button>
 
-  <br><br><br> <!-- sorry.....-->
+  <br><br><br> 
+  -->
 
   <div id="songSelectorTable"></div>
 
   <section>
   <div id="genreArtistList"></div>
   </section>
+
+
+  <table>
+  <tbody>
+  <tr><td>1</td><td>2</td><td>3</td><td>4</td></tr>
+  <tr><td>5</td><td>6</td><td>7</td><td>8</td></tr>
+  <tr><td>9</td><td>10</td><td>11</td><td>12</td></tr>
+  </tbody>
+  </table>
+  <div id="hoge"></div>
+
+
 
   <!--
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
