--- a/static/player.html
+++ b/static/player.html
@@ -10,16 +10,25 @@
   <h1>Player</h1>
 
   <div class="uploaderContainer" >
+      <!--
       <form method="POST", action="../songs" enctype="multipart/form-data">
+      -->
       <div class="from-group">
           <label for="inputFile">choose file to upload</label>
           <br>
-          <input type="file" name="inputFile" accept="audio/mpeg">
+          <input type="file" name="inputFile" id="input_file">
+          <!--
+          <input type="file" name="inputFile" accept="audio/mpeg" id="input_file">
+          -->
       </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <!--
+          <button type="submit" id="submit_button">Submit.</button>
+        -->
+          <input type="button" id="submit_button" value="submit">
+      <!--
       </form>
+    -->
   </div>
-
 
   <div>
     <input type="number", id="songIDInput", value="25">
@@ -35,9 +44,11 @@
   <!--
   <button type="button" onclick="console.log(getSong(25))">DEBUG</button>
   <button type="button" onclick="console.log(1); window.scrollBy(0, 300);">ScrollBy</button>
+  <input type="button" value="test" id="test_button">
+  -->
 
   <br><br><br>
-  -->
+
 
   <div id="songSelectorTable"></div>
 
@@ -46,7 +57,7 @@
   </section>
 
 
-  <table>
+  <table style="margin: 10px 0">
   <tbody>
   <tr><td>1</td><td>2</td><td>3</td><td>4</td></tr>
   <tr><td>5</td><td>6</td><td>7</td><td>8</td></tr>
