delete some tag

--- a/static/player.html
+++ b/static/player.html
@@ -41,15 +41,6 @@
   <p id="counter">Current context time: No context exists.</p>
   </div>
 
-  <!--
-  <button type="button" onclick="console.log(getSong(25))">DEBUG</button>
-  <button type="button" onclick="console.log(1); window.scrollBy(0, 300);">ScrollBy</button>
-  <input type="button" value="test" id="test_button">
-
-
-  <br><br><br>
-    -->
-
 
   <div id="songSelectorTable"></div>
 
@@ -57,7 +48,7 @@
   <div id="genreArtistList"></div>
   </section>
 
-
+  <!--
   <table style="margin: 10px 0">
   <tbody>
   <tr><td>1</td><td>2</td><td>3</td><td>4</td></tr>
@@ -65,24 +56,10 @@
   <tr><td>9</td><td>10</td><td>11</td><td>12</td></tr>
   </tbody>
   </table>
-  <div id="hoge"></div>
+  -->
+  <div id="tableDebug" style="margin: 10px 0"></div>
 
 
-
-  <!--
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  aaaaaa
-  <br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  aaaaaa
-  <br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  aaaaaa
-  <br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  bbbb
-  <br><br><br><br><br><br><br>
--->
 
 </body>
 
