--- a/static/player.html
+++ b/static/player.html
@@ -15,8 +15,7 @@
     <div class="from-group">
       <label for="inputFile">choose file to upload</label>
       <br>
-      <input type="file" name="inputFile" id="input_file">
-
+      <input type="file" name="inputFile" id="input_file" accept="audio/mpeg">
     </div>
     <input type="button" id="submit_button" value="submit">
   </div>
