add drag and drop

--- a/static/player.html
+++ b/static/player.html
@@ -20,6 +20,9 @@
     <input type="button" id="submit_button" value="submit">
   </div>
 
+  <div id="drop_zone">Drop files here </div>
+  <output id="list"></output>
+
   <div>
     <input type="number" , id="songIDInput" , value="25">
   </div>
