change drag and drop example

--- a/static/player.html
+++ b/static/player.html
@@ -20,8 +20,11 @@
     <input type="button" id="submit_button" value="submit">
   </div>
 
-  <div id="drop_zone">Drop files here </div>
-  <output id="list"></output>
+  <div class="drop_zone_container">
+    <div id="drop_zone">Drop files here </div>
+    <input type="file" id="files" name="files[]" multiple>
+    <output id="list"></output>
+  </div>
 
   <div>
     <input type="number" , id="songIDInput" , value="25">
