--- a/static/player.html
+++ b/static/player.html
@@ -20,7 +20,7 @@
     <input type="button" id="submit_button" value="submit">
   </div>
 
-  <div class="drop_zone_container">
+  <div id="drop_zone_container">
     <div id="drop_zone">Drop files here </div>
     <input type="file" id="files" name="files[]" multiple>
     <output id="list"></output>
