--- a/static/player.html
+++ b/static/player.html
@@ -11,7 +11,7 @@
 
   <h1>Player</h1>
 
-  <div class="uploaderContainer">
+  <div id="uploaderContainer">
     <div class="from-group">
       <label for="inputFile">choose file to upload</label>
       <br>
