finish drag and drop uploading

--- a/static/player.html
+++ b/static/player.html
@@ -22,8 +22,13 @@
 
   <div id="drop_zone_container">
     <div id="drop_zone" >Drop files here </div>
+    
+    <!--
     <input type="file" id="files" name="files[]" multiple>
+    -->
+
     <output id="list"></output>
+    <span id="drop_zone_message"><span>
   </div>
 
   <div>
