--- a/static/player.html
+++ b/static/player.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Player</title>
+  <title>Music Drop</title>
   <link rel="stylesheet" type="text/css" href="css/player.css" />
 </head>
 
 <body>
 
-  <h1>Player</h1>
+  <h1>Music Drop</h1>
 
   <div id="uploaderContainer">
     <div class="from-group">
-      <label for="inputFile">choose file to upload</label>
+      <label for="inputFile">choose file to upload(this function is going to be removed in the future)</label>
       <br>
       <input type="file" name="inputFile" id="input_file" accept="audio/mpeg">
     </div>
@@ -21,7 +21,7 @@
   </div>
 
   <div id="drop_zone_container">
-    <div id="drop_zone" >Drop files here </div>
+    <div id="drop_zone" >Drop files here! </div>
     
     <!--
     <input type="file" id="files" name="files[]" multiple>
