--- a/static/player.html
+++ b/static/player.html
@@ -13,7 +13,7 @@
 
   <div id="uploaderContainer">
     <div class="from-group">
-      <label for="inputFile">choose file to upload(this function is going to be removed in the future)</label>
+      <label for="inputFile">choose file to upload(this function is going to be removed in the future or remain in the drop area for non-mouse environment)</label>
       <br>
       <input type="file" name="inputFile" id="input_file" accept="audio/mpeg">
     </div>
@@ -22,17 +22,11 @@
 
   <div id="drop_zone_container">
     <div id="drop_zone" >Drop files here! </div>
-    
-    <!--
-    <input type="file" id="files" name="files[]" multiple>
-    -->
-
-    <output id="list"></output>
     <span id="drop_zone_message"><span>
   </div>
 
   <div>
-    <input type="number" , id="songIDInput" , value="25">
+    <input type="number", id="songIDInput" , value="25">
   </div>
 
   <div>
