add table edit button

--- a/static/player.html
+++ b/static/player.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="space">
-            <input type="number" , id="songIDInput" , value="25">
+            <input type="number" , id="songIDInput" , value="">
         </div>
 
         <div>
@@ -39,6 +39,9 @@
             <p id="counter">Current context time: No context exists.</p>
         </div>
 
+        <div>
+            <input type="button" id="editButton" value="&#x1f58c;">
+        </div>
 
         <div class="padding" id="songSelectorTable"></div>
 
