add table editing

--- a/static/player.html
+++ b/static/player.html
@@ -39,7 +39,7 @@
             <p id="counter">Current context time: No context exists.</p>
         </div>
 
-        <div>
+        <div id="edit_cancel_buttons">
             <input type="button" id="editButton" value="&#x1f58c;">
         </div>
 
