--- a/static/player.html
+++ b/static/player.html
@@ -40,7 +40,8 @@
         </div>
 
         <div id="edit_cancel_buttons">
-            <input type="button" id="editButton" value="&#x1f58c;">
+            <input type="button" id="editStartButton" value="&#x1f58c;">
+            <input type="button" id="editCancelButton" value="Cancel">
         </div>
 
         <div class="padding" id="songSelectorTable"></div>
