--- a/static/player.html
+++ b/static/player.html
@@ -40,8 +40,11 @@
         </div>
 
         <div id="edit_cancel_buttons">
+            <!--
             <input type="button" id="editStartButton" value="&#x1f58c;">
-            <input type="button" id="editCancelButton" value="Cancel">
+            -->
+            <input type="button" id="editStartButton" value="🖋">
+            <input type="button" id="editCancelButton" value="Cancel" visibility="hidden">
         </div>
 
         <div class="padding" id="songSelectorTable"></div>
