--- a/static/player.html
+++ b/static/player.html
@@ -13,7 +13,7 @@
 
         <div id="uploaderContainer">
             <div class="from-group">
-                <label for="inputFile">choose file to upload <br>(this function is going to be removed in the future or remain in
+                <label for="inputFile">Choose your <span class="white">mp3</span> file to upload <br>(this function is going to be removed in the future or remain in
                     the drop area for non-mouse environment)</label>
                 <br> <div class="space"></div>
                 <input type="file" name="inputFile" id="input_file" accept="audio/mpeg">
@@ -24,6 +24,7 @@
 
         <div id="drop_zone_container">
             <div id="drop_zone">Drop files here!</div>
+            <div class="space"></div>
             <span id="drop_zone_message"></span>
         </div>
 
