--- a/static/player.html
+++ b/static/player.html
@@ -44,7 +44,7 @@
             <input type="button" id="editStartButton" value="&#x1f58c;">
             -->
             <input type="button" id="editStartButton" value="🖋">
-            <input type="button" id="editCancelButton" value="Cancel" visibility="hidden">
+            <input type="button" id="editCancelButton" value="Cancel">
         </div>
 
         <div class="padding" id="songSelectorTable"></div>
