--- a/static/player.html
+++ b/static/player.html
@@ -13,7 +13,7 @@
 
         <div id="uploaderContainer">
             <div class="from-group">
-                <label for="inputFile">choose your <span class="white">mp3</span> file to upload <br>(this function is going to be removed in the future or remain in
+                <label for="inputFile">choose your <span class="red">mp3</span> file to upload <br>(this function is going to be removed in the future or remain in
                     the drop area for non-mouse environment)</label>
                 <br> <div class="space"></div>
                 <input type="file" name="inputFile" id="input_file" accept="audio/mpeg">
