add song deletion

--- a/static/player.html
+++ b/static/player.html
@@ -39,12 +39,13 @@
             <p id="counter">Current context time: No context exists.</p>
         </div>
 
-        <div id="edit_cancel_buttons">
-            <!--
-            <input type="button" id="editStartButton" value="&#x1f58c;">
-            -->
+        <div id="edit_buttons">
             <input type="button" id="editStartButton" value="🖋">
             <input type="button" id="editCancelButton" value="Cancel">
+        </div>
+
+        <div id="delete_buttons">
+            <input type="button" id="deleteButton" value="✂">
         </div>
 
         <div class="padding" id="songSelectorTable"></div>
