--- a/static/player.html
+++ b/static/player.html
@@ -11,19 +11,29 @@
     <div id="audioDropPanel">
         <h1>Music Drop</h1>
 
+
         <div id="uploaderContainer">
             <div class="from-group">
                 <label for="inputFile">choose your <span class="red">mp3</span> file to upload <br>(this function is going to be removed in the future or remain in
                     the drop area for non-mouse environment)</label>
-                <br> <div class="space"></div>
+                <br>
+                <div class="space"></div>
                 <input type="file" name="inputFile" id="input_file" accept="audio/mpeg">
             </div>
             <div class="space"></div>
             <input type="button" class="submitButton" id="submit_button" value="Submit">
         </div>
 
+
+
         <div id="drop_zone_container">
-            <div id="drop_zone">Drop files here!</div>
+            <div id="drop_zone">Drop file here!</div>
+            <div >
+                <label for="selectFileButton" id="selectFileLabel">
+                    or click here
+                    <input type="file" name="inputFile" id="selectFileButton" accept="audio/mpeg">
+                </label>
+            </div>
             <span class="space_top" id="drop_zone_message"></span>
         </div>
 
