--- a/static/player.html
+++ b/static/player.html
@@ -13,20 +13,21 @@
 
         <div id="drop_zone_container">
             <div id="drop_zone">Drop file here!</div>
-            <div >
-                <label for="selectFileButton" id="selectFileLabel">
-                    or click here
-                    <input type="file" name="inputFile" id="selectFileButton" accept="audio/mpeg">
-                </label>
-            </div>
             <span class="space_top" id="drop_zone_message"></span>
         </div>
 
         <div class="space">
+            <label for="selectFileButton" id="selectFileLabel">
+                or click here
+                <input type="file" name="inputFile" id="selectFileButton" accept="audio/mpeg">
+            </label>
+        </div>
+
+        <div class="padding">
             <input type="number" , id="songIDInput" , value="">
         </div>
 
-        <div>
+        <div class="space_top">
             <button class="playerButtons" id="startAudioContext">Play</button>
             <button class="playerButtons" id="suspendAudioContext">Pause</button>
             <button class="playerButtons" id="stopAudioContext">Stop</button>
