change deletion procedure

--- a/static/player.html
+++ b/static/player.html
@@ -42,6 +42,7 @@
 
         <div id="delete_buttons">
             <input type="button" id="deleteButton" value="✂">
+            <input type="button" id="deleteConfirmButton" value="Confirm">
             <input type="button" id="deleteCancelButton" value="Cancel">
         </div>
 
