cleaned the HTML

--- a/static/player.html
+++ b/static/player.html
@@ -30,7 +30,6 @@
         <div class="album-art">
             <img src="images/Arctic_Monkeys.jpg" alt=""/>
         </div>
-<<<<<<< HEAD
         <div class="player">
             <i class="fa fa-repeat"></i>
             <i class="fa fa-fast-backward"></i>
@@ -43,18 +42,11 @@
         <div class="title">Arctic Monkeys - The view from the afternoon</div>
         <div class="time-tracker">
             <div class="timer">
-                <div class="bg">
-                </div>
+                <div class="bg"> </div>
             </div>
             <div class="time">1:02</div>
-=======
-
-        <div id="delete_buttons">
-            <input type="button" id="deleteButton" value="✂">
-            <input type="button" id="deleteConfirmButton" value="Confirm">
-            <input type="button" id="deleteCancelButton" value="Cancel">
->>>>>>> 79edad1ed11a10efe1b72cccd71fcd556b61c8ed
         </div>
+        
     </footer>
     <div id="drop_zone_container">
         <div id="drop_zone">Drop file here!</div>
