new margin and autor comment

--- a/static/player.html
+++ b/static/player.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Music Drop</title>
+    <meta name="author" content="Shuya Fuchigami, 554092 and Sebastian Braun, 549301">
+    <title>Musicplayer and Server</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -15,7 +16,6 @@
 
 <body>
 
-
 <div class="mediaplayer">
 
     <header>
@@ -26,6 +26,7 @@
             <i class="fa fa-cog"></i>
         </div>
     </header>
+
     <main>
         <div class="album-art">
             <img src="images/Arctic_Monkeys.jpg" alt=""/>
@@ -38,6 +39,7 @@
             <i class="fa fa-random"></i>
         </div>
     </main>
+
     <footer>
         <div class="title">Arctic Monkeys - The view from the afternoon</div>
         <div class="time-tracker">
@@ -46,21 +48,12 @@
             </div>
             <div class="time">1:02</div>
         </div>
-        
     </footer>
+
     <div id="drop_zone_container">
         <div id="drop_zone">Drop file here!</div>
         <span class="space_top" id="drop_zone_message"></span>
     </div>
-
-    <div class="padding" id="songSelectorTable"></div>
-
-    <section>
-            <div id="genreArtistList"></div>
-    </section>
-
-    <div class="margin" id="tableDebug"></div>
-
 
 </div>
 
