--- a/static/player.html
+++ b/static/player.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+    <div id="audioController">
+        <Label> audio position (prototype implementation) </Label>
+        <br>
+        <input class="range"  type="range" id="audioPositionControlSlider" min="0" max="100" step="1" value="0">
+        Position: <output id="audioPosition"></output>
+        <br>
+        <input type="button" id="slideDebugButton" value="slideDebugButton">
+    </div>
+
     <div id="audioDropPanel">
         <h1>Music Drop</h1>
 
