fix play button

--- a/static/player.html
+++ b/static/player.html
@@ -80,7 +80,10 @@
 
 
     <div>
+        <!-- replace by new button -->
+        <!--
         <button class="playerButtons" id="startAudioContext">Play</button>
+        -->
         <button class="playerButtons" id="suspendAudioContext">Pause</button>
         <button class="playerButtons" id="stopAudioContext">Stop</button>
         <div class="space"></div>
