--- a/static/player.html
+++ b/static/player.html
@@ -15,103 +15,98 @@
 </head>
 
 <body>
-<div id="audioController">
-    <Label> audio position (prototype implementation) </Label>
-    <br>
-    <input class="range" type="range" id="audioPositionControlSlider" min="0" max="100" step="1" value="0">
-    Position:
-    <output id="audioPosition"></output>
-    <br>
-    <input type="button" id="slideDebugButton" value="slideDebugButton">
-</div>
-
-<div id="audioDropPanel">
-    <h1>Music Drop</h1>
-</div>
-
-
-<div class="mediaplayer">
-
-    <header>
-        <div class="playlist">
-            <i class="fa fa-bars"></i>
-        </div>
-        <div class="setting">
-            <i class="fa fa-cog"></i>
-        </div>
-    </header>
-
-    <main>
-        <div class="album-art">
-            <img src="images/Arctic_Monkeys.jpg" alt=""/>
-        </div>
-        <div class="player">
-            <i class="fa fa-repeat"></i>
-            <i class="fa fa-fast-backward"></i>
-            <i class="fa fa-play" id="startAudioContext"></i>
-            <i class="fa fa-fast-forward"></i>
-            <i class="fa fa-random"></i>
-        </div>
-    </main>
-
-    <footer>
-        <div class="title">Arctic Monkeys - The view from the afternoon</div>
-        <div class="time-tracker">
-            <div class="timer">
-                <div class="bg"></div>
-            </div>
-            <div class="time">1:02</div>
-        </div>
-    </footer>
-
-
-    <div id="drop_zone_container">
-        <div id="drop_zone">Drop file here!</div>
-        <span class="space_top" id="drop_zone_message"></span>
+    <div id="audioController">
+        <Label> audio position (prototype implementation) </Label>
+        <br>
+        <input class="range" type="range" id="audioPositionControlSlider" min="0" max="100" step="1" value="0">
+        Position:
+        <output id="audioPosition"></output>
+        <br>
+        <input type="button" id="slideDebugButton" value="slideDebugButton">
     </div>
 
+    <div class="mediaplayer">
 
-    <div class="space">
+        <header>
+            <div tooltip="click to  show your playlist">
+            <div onclick="showHideListFunction()" class="playlist">
+                <i class="fa fa-bars"></i>
+            </div>
+            </div>
+            <div class="setting">
+                <i class="fa fa-cog"></i>
+            </div>
+        </header>
+
+        <main>
+            <div class="album-art">
+                <img src="images/Arctic_Monkeys.jpg" alt=""/>
+            </div>
+            <div class="player">
+                <i class="fa fa-repeat"></i>
+                <i class="fa fa-fast-backward"></i>
+                <i class="fa fa-play" id="startAudioContext"></i>
+                <i class="fa fa-fast-forward"></i>
+                <i class="fa fa-random"></i>
+            </div>
+        </main>
+
+        <footer>
+            <div class="title">Arctic Monkeys - The view from the afternoon</div>
+            <div class="time-tracker">
+                <div class="timer">
+                    <div class="bg"></div>
+                </div>
+                <div class="time">1:02</div>
+            </div>
+        </footer>
+
+
+        <div id="drop_zone_container">
+            <div id="drop_zone">Drop file here!</div>
+            <span class="space_top" id="drop_zone_message"></span>
+        </div>
+        <div>
         <label for="selectFileButton" id="selectFileLabel">
             or click here
             <input type="file" name="inputFile" id="selectFileButton" accept="audio/mpeg">
         </label>
+        </div>
     </div>
 
+    <div class="space musicList hidden" id="showList">
 
-    <div>
-        <!-- replace by new button -->
-        <!--
-        <button class="playerButtons" id="startAudioContext">Play</button>
-        -->
-        <button class="playerButtons" id="suspendAudioContext">Pause</button>
-        <button class="playerButtons" id="stopAudioContext">Stop</button>
-        <div class="space"></div>
-        <p id="counter">Current context time: No context exists.</p>
+        <div>
+            <!-- replace by new button -->
+
+            <button class="playerButtons" id="startAudioContext">Play</button>
+
+            <button class="playerButtons" id="suspendAudioContext">Pause</button>
+            <button class="playerButtons" id="stopAudioContext">Stop</button>
+            <div class="space"></div>
+            <p id="counter">Current context time: No context exists.</p>
+        </div>
+
+        <div class="padding">
+            <input type="number" , id="songIDInput" , value="">
+        </div>
+
+        <div id="edit_buttons">
+            <input type="button" id="editStartButton" value="🖋">
+            <input type="button" id="editCancelButton" value="Cancel">
+        </div>
+
+        <div id="delete_buttons">
+            <input type="button" id="deleteButton" value="✂">
+            <input type="button" id="deleteConfirmButton" value="Confirm">
+            <input type="button" id="deleteCancelButton" value="Cancel">
+        </div>
+
+        <div>
+            <div class="padding" id="songSelectorTable"></div>
+            <div class="margin" id="tableDebug"></div>
+        </div>
     </div>
-
-    <div class="padding">
-        <input type="number" , id="songIDInput" , value="">
-    </div>
-
-    <div id="edit_buttons">
-        <input type="button" id="editStartButton" value="🖋">
-        <input type="button" id="editCancelButton" value="Cancel">
-    </div>
-
-    <div id="delete_buttons">
-        <input type="button" id="deleteButton" value="✂">
-        <input type="button" id="deleteConfirmButton" value="Confirm">
-        <input type="button" id="deleteCancelButton" value="Cancel">
-    </div>
-
-
-    <div class="padding" id="songSelectorTable"></div>
-    <div class="margin" id="tableDebug"></div>
-
-
-</div>
-
 </body>
 <script src="scripts/player.js"></script>
 </html>
