--- a/static/player.html
+++ b/static/player.html
@@ -18,16 +18,19 @@
 <div id="audioController">
     <Label> audio position (prototype implementation) </Label>
     <br>
-    <input class="range" type="range" id="audioPlaybackPositionControlSlider" min="0" max="100" step="1" value="0">
+    <input class="range" type="range" id="audioPlaybackPositionControlSlider" min="0.0" max="1.0" step="0.05" value="0.0">
+    <br>
     Position:
-    <output id="audioPosition"></output>
+    <output id="audioPlaybackPositionDisplay"></output>
+    <br>
     <br>
 
     <Label> audio volume (prototype implementation) </Label>
     <br>
     <input class="range" type="range" id="audioVolumeControlSlider" min="0.0" max="3.0" step="0.05" value="1.5">
+    <br>
     Position:
-    <output id="audioVolume"></output>
+    <output id="audioVolumeDisplay"></output>
 
 </div>
 
@@ -95,6 +98,7 @@
         <button class="playerButtons" id="stopAudioContext">Stop(DO NOT CLICK!)</button>
         <div class="space"></div>
         <p id="counter">Current "CONTEXT" time: No context exists.</p>
+        <p id="audioSourcePlaybackTimeDisplay">Current "source" time: --.</p>
     </div>
 
     <div class="padding">
