add new progressbar

--- a/static/player.html
+++ b/static/player.html
@@ -100,7 +100,7 @@
             <div class="title">Arctic Monkeys - The view from the afternoon</div>
             <div class="time-tracker">
                 <div class="timer">
-                    <div class="bg"></div>
+                    <div class="bg" id="audioPlayBackProgressBar"></div>
                 </div>
                 <div class="time">1:02</div>
             </div>
