add time converter for count4r

--- a/static/player.html
+++ b/static/player.html
@@ -100,9 +100,10 @@
             <div class="title">Arctic Monkeys - The view from the afternoon</div>
             <div class="time-tracker">
                 <div class="timer">
-                    <div class="bg" id="audioPlayBackProgressBar"></div>
+                    <div class="bg" id="audioPlayBackProgressBarController"></div>
+                    <div class="bgStart" id="audioPlayBackProgressBar"></div>
                 </div>
-                <div class="time">1:02</div>
+                <div class="time" id="audioPlayBackProgressCounter">00:00:00</div>
             </div>
         </footer>
 
