change font awesome icons to images for offline using. Update css and html

--- a/static/player.html
+++ b/static/player.html
@@ -67,8 +67,8 @@
 
         <header>
             <div tooltip="click to  show your playlist">
-            <div onclick="showHideListFunction()" class="playlist">
-                <i class="fa fa-bars"></i>
+            <div onclick="showHideListFunction()" >
+                <img class="playlist" src="images/playlistButton.png"/>
             </div>
             </div>
             <div class="setting">
@@ -81,11 +81,11 @@
                 <img src="images/Arctic_Monkeys.jpg" alt=""/>
             </div>
             <div class="player">
-                <i class="fa fa-repeat"></i>
-                <i class="fa fa-fast-backward"></i>
-                <i class="fa fa-play" id="startAudioContext"></i>
-                <i class="fa fa-fast-forward"></i>
-
+                <img class="fa repeat" src="images/loopButton.png"/>
+                <img class="fa fast-backward" src="images/rewindButton.png"/>
+                <img class="fa play" src="images/playButton.png" id="startAudioContext"/>
+                <img class="fa pause hidden" src="images/pauseButton.png"/>
+                <img class="fa fast-forward" src="images/skipButton.png"/>
                 <img class="fa random" src="images/randomButton.png" alt=""/>
             </div>
         </main>
