--- a/static/player.html
+++ b/static/player.html
@@ -91,7 +91,7 @@
         </main>
 
         <footer>
-            <div class="title" id="audioTitle">Arctic Monkeys - The view from the afternoon</div>
+            <div class="title" id="audioInformation">Arctic Monkeys - The view from the afternoon</div>
             <div class="time-tracker">
                 <div class="timer">
                     <div class="bg" id="audioPlayBackProgressBarController"></div>
