fix audio pause button

--- a/static/player.html
+++ b/static/player.html
@@ -62,7 +62,7 @@
             <img class="buttons repeat" src="images/loopButton.png"/>
             <img class="buttons fast-backward" src="images/rewindButton.png"/>
             <img class="buttons play" src="images/playButton.png" id="startAudioContext"/>
-            <img class="buttons pause hidden" src="images/pauseButton.png"/>
+            <img class="buttons pause hidden" src="images/pauseButton.png" id="audioPauseButton"/>
             <img class="buttons fast-forward" src="images/skipButton.png"/>
             <img class="buttons random" src="images/randomButton.png" alt=""/>
         </div>
