--- a/static/player.html
+++ b/static/player.html
@@ -80,7 +80,7 @@
 
 
     <div id="drop_zone_container">
-        <div id="drop_zone">Drop file here!</div>
+        <div id="drop_zone">Drop mp3 here!</div>
         <span class="space_top" id="drop_zone_message"></span>
     </div>
     <div>
