add audio repeat and random

--- a/static/player.html
+++ b/static/player.html
@@ -37,7 +37,12 @@
     Position:
     <output id="audioVolumeDisplay"></output>
 
+    <br>
+    <br>
+    Repeat: <div id="audioRepeatPlayStatusDisplay"></div>
+    Random: <div id="audioRandomPlayStatusDisplay"></div>
 </div>
+
 
 <div class="mediaplayer">
     <header>
