--- a/static/player.html
+++ b/static/player.html
@@ -39,8 +39,9 @@
 
     <br>
     <br>
-    Repeat: <div id="audioRepeatPlayStatusDisplay"></div>
-    Random: <div id="audioRandomPlayStatusDisplay"></div>
+    Repeat: <span id="audioRepeatPlayStatusDisplay">OFF</span>
+    <br>
+    Random: <span id="audioRandomPlayStatusDisplay">OFF</span>
 </div>
 
 
@@ -64,12 +65,12 @@
             <img src="images/Arctic_Monkeys.jpg" alt=""/>
         </div>
         <div class="player">
-            <img class="buttons repeat" src="images/loopButton.png"/>
+            <img class="buttons repeat" src="images/loopButton.png" id="audioRepeatPlayButton"/>
             <img class="buttons fast-backward" src="images/rewindButton.png"/>
             <img class="buttons play" src="images/playButton.png" id="startAudioContext"/>
             <img class="buttons pause hidden" src="images/pauseButton.png" id="audioPauseButton"/>
             <img class="buttons fast-forward" src="images/skipButton.png"/>
-            <img class="buttons random" src="images/randomButton.png" alt=""/>
+            <img class="buttons random" src="images/randomButton.png" alt="" id="audioRandomPlayButton"/>
         </div>
     </main>
         <footer>
