--- a/static/player.html
+++ b/static/player.html
@@ -66,10 +66,10 @@
         </div>
         <div class="player">
             <img class="buttons repeat" src="images/loopButton.png" id="audioRepeatPlayButton"/>
-            <img class="buttons fast-backward" src="images/rewindButton.png"/>
+            <img class="buttons fast-backward" src="images/rewindButton.png" id="audioRewindButton"/>
             <img class="buttons play" src="images/playButton.png" id="startAudioContext"/>
             <img class="buttons pause hidden" src="images/pauseButton.png" id="audioPauseButton"/>
-            <img class="buttons fast-forward" src="images/skipButton.png"/>
+            <img class="buttons fast-forward" src="images/skipButton.png" id="audioSkipButton"/>
             <img class="buttons random" src="images/randomButton.png" alt="" id="audioRandomPlayButton"/>
         </div>
     </main>
