drop the visualizer in the main section, delete redundant css code and update css

--- a/static/player.html
+++ b/static/player.html
@@ -62,7 +62,7 @@
     </header>
     <main>
         <div class="album-art">
-            <img src="images/Arctic_Monkeys.jpg" alt=""/>
+            <canvas class="album-art frame" id="visualizer"></canvas>
         </div>
         <div class="player">
             <img class="buttons repeat" src="images/loopButton.png" id="audioRepeatPlayButton"/>
