--- a/static/player.html
+++ b/static/player.html
@@ -107,25 +107,9 @@
 
 <div class="space musicList hidden" id="showList">
 
-
-    <!--
-    <div>
-
-        <button class="playerButtons" id="suspendAudioContext">Pause(DO NOT CLICK!)</button>
-        <button class="playerButtons" id="stopAudioContext">Stop(DO NOT CLICK!)</button>
-        <div class="space"></div>
-        <p id="counter">Current "CONTEXT" time: No context exists.</p>
-        <p id="audioSourcePlaybackTimeDisplay">Current "source" time: --.</p>
-    </div>
-    <div class="padding">
-        <input type="number" , id="songIDInput" , value="">
-    </div>
-    -->
-
-
     <div id="edit_buttons">
-        <input type="button" id="editStartButton" value="🖋">
-        <input type="button" id="editCancelButton" value="Cancel">
+        <input type="button" class="playerButtons" id="editStartButton" value="EDIT">
+        <input type="button" id="editCancelButton" value="CANCEL">
     </div>
 
     <div id="delete_buttons">
