--- a/static/player.html
+++ b/static/player.html
@@ -74,7 +74,9 @@
         </div>
     </main>
         <footer>
-            <div class="title" id="audioInformation">Arctic Monkeys - The view from the afternoon</div>
+            <div class="title" id="audioInformationFrame">
+                <p id="audioInformation">Arctic Monkeys - The view from the afternoon</p>
+            </div>
             <div class="time-tracker">
                 <div class="timer">
                     <div class="bg" id="audioPlayBackProgressBarController"></div>
