add tag for mute button

--- a/static/player.html
+++ b/static/player.html
@@ -56,7 +56,8 @@
             <div class="volume">
                 <div class="volumeBG" id="audioPlayBackVolumeController"></div>
                 <div class="volumeLine" id="audioPlayBackVolumeBar"></div>
-                <img class="volumeIcon" src="images/volumeButton.png"/>
+                <img class="volumeIcon hidden" src="images/volumeButton.png"/>
+                <img class="muteIcon" src="images/muteButton.png"/>
             </div>
         </div>
     </header>
