change repeat button

--- a/static/player.html
+++ b/static/player.html
@@ -59,8 +59,8 @@
             <div class="volume">
                 <div class="volumeLine" id="audioPlayBackVolumeBar"></div>
                 <div class="volumeBG" id="audioPlayBackVolumeController"></div>
-                <img class="volumeIcon hidden" src="images/volumeButton.png"/>
-                <img class="muteIcon" src="images/muteButton.png"/>
+                <img class="volumeIcon" src="images/volumeButton.png"/>
+                <img class="muteIcon hidden" src="images/muteButton.png"/>
             </div>
         </div>
     </header>
@@ -70,6 +70,7 @@
         </div>
         <div class="player">
             <img class="buttons repeat" src="images/loopButton.png" id="audioRepeatPlayButton"/>
+            <img class="buttons repeatActive hidden" src="images/repeatButtonActive.png" id="audioRepeatPlayButtonActive"/>
             <img class="buttons fast-backward" src="images/rewindButton.png" id="audioRewindButton"/>
             <img class="buttons play" src="images/playButton.png" id="startAudioContext"/>
             <img class="buttons pause hidden" src="images/pauseButton.png" id="audioPauseButton"/>
