fix volume button assignment

--- a/static/player.html
+++ b/static/player.html
@@ -59,8 +59,8 @@
             <div class="volume">
                 <div class="volumeLine" id="audioPlayBackVolumeBar"></div>
                 <div class="volumeBG" id="audioPlayBackVolumeController"></div>
-                <img class="volumeIcon" src="images/volumeButton.png"/>
-                <img class="muteIcon hidden" src="images/muteButton.png"/>
+                <img class="volumeIcon" src="images/volumeButton.png" id="volumeIcon"/>
+                <img class="muteIcon hidden" src="images/muteButton.png" id="muteIcon"/>
             </div>
         </div>
     </header>
