new button for repeat active

--- a/static/player.html
+++ b/static/player.html
@@ -70,12 +70,13 @@
         </div>
         <div class="player">
             <img class="buttons repeat" src="images/loopButton.png" id="audioRepeatPlayButton"/>
-            <img class="buttons repeatActive hidden" src="images/repeatButtonActive.png" id="audioRepeatPlayButtonActive"/>
+            <img class="buttons repeatActive hidden" src="images/loopButtonActive.png" id="audioRepeatPlayButtonActive"/>
             <img class="buttons fast-backward" src="images/rewindButton.png" id="audioRewindButton"/>
             <img class="buttons play" src="images/playButton.png" id="startAudioContext"/>
             <img class="buttons pause hidden" src="images/pauseButton.png" id="audioPauseButton"/>
             <img class="buttons fast-forward" src="images/skipButton.png" id="audioSkipButton"/>
             <img class="buttons random" src="images/randomButton.png" alt="" id="audioRandomPlayButton"/>
+            <img class="buttons randomActive hidden" src="images/randomButtonActive.png" alt="" id="audioRandomPlayButton"/>
         </div>
     </main>
 
