--- a/static/player.html
+++ b/static/player.html
@@ -76,7 +76,7 @@
             <img class="buttons pause hidden" src="images/pauseButton.png" id="audioPauseButton"/>
             <img class="buttons fast-forward" src="images/skipButton.png" id="audioSkipButton"/>
             <img class="buttons random" src="images/randomButton.png" alt="" id="audioRandomPlayButton"/>
-            <img class="buttons randomActive hidden" src="images/randomButtonActive.png" alt="" id="audioRandomPlayButton"/>
+            <img class="buttons randomActive hidden" src="images/randomButtonActive.png" alt="" id="audioRandomPlayButtonActive"/>
         </div>
     </main>
 
